      headers handling and in the server protocol.

    - ~mu4e-index-updated-hook~ now fires after indexing completed, regardless of
      whether anything changed (before, it fired only is something changed). In
      your hook-functions (or elsewhere) you can check if anything changed using
      the new variable ~mu4e-index-update-status~.

    - a lot of the internals have been changed:

      - =mu4e= is slowly moving from using the =~= to the more common =--= separator
	for private functions; i.e., =mu4e-foo= becomes =mu4e--foo=.

      - =mu4e-utils.el= had become a bit of a dumping ground for bits of code;
	it's gone now, with the functionality move to topic-specific files --
	=mu4e-folders.el=, =mu4e-bookmarks.el=, =mu4e-update.el=, and included in
	existing files.

      - the remaining common functionality has ended up in =mu4e-helpers.el=

      - =mu4e-search.el= takes the search-specific code from =mu4e-headers.el=, and
	adds a minor-mode for the keybindings.

      - =mu4e-context.el= and =mu4e-update.el= also define minor modes with
	keybindings, which saves a lot of code in the various views, since they
	don't need explicitly bind all those function.

      - also =mu4e-vars.el= had become very big, we're refactoring the =defvar= /
	=defcustom= declarations to the topic-specific files.

      - =mu4e-proc.el= has been renamed =mu4e-server.el=.

    - Because of all these changes, it is recommended you remove older version
      of ~mu4e~ before reinstalling.

*** guile

    - the guile interface has been deprecated. It may be revamped at some point,
      but will be different from the current one, which is to be removed after
      1.8.x


* 1.6 (released, as of July 27 2021)

  NOTE: After upgrading, you need to call ~mu init~, with your prefered parameters
  before you can use ~mu~ / ~mu4e~. This is because the underlying database-schema
  has changed.

*** mu

    - Where available (and with suitably equiped ~libglib~), log to the ~systemd~